# SPARO_Multi_Floor_Nav

./: .gitmodules  README.md
docker/: Dockerfile  container_build.sh  container_run.sh
sparo_multi_floor_navigation/sparo_navigation_bringup/: CMakeLists.txt  package.xml
sparo_multi_floor_navigation/sparo_navigation_bringup/behavior_trees/: patrol_all_floors.xml  test_topic_based.xml
sparo_multi_floor_navigation/sparo_navigation_bringup/behavior_trees/subtrees/: door_test_L1.xml  elevator_only.xml  stairs_only.xml
sparo_multi_floor_navigation/sparo_navigation_bringup/config/door/: L1.yaml  L2.yaml  L3.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/config/elevator/: elevator_lift1.yaml  elevator_lift2.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/config/navigation/: floors.yaml  nav2_params.yaml  patrol_L1.yaml  patrol_L2.yaml  patrol_L3.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/config/stair/: stairs.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/config/visualization/: sparo_nav2.rviz
sparo_multi_floor_navigation/sparo_navigation_bringup/launch/: multi_bt_runners.launch.py  planner.launch.py  test_door_only.launch.py  test_navigation.launch.py  test_stair_only.launch.py
sparo_multi_floor_navigation/sparo_navigation_bringup/maps/: hotel_L2.yaml  hotel_L3.pgm  hotel_L3.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/maps/b2/: hotel_L1.pgm  hotel_L1.yaml  hotel_L2.pgm  hotel_L2.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/maps/go2/: hotel_L1.pgm  hotel_L1.yaml  hotel_L2.yaml  hotel_L3.pgm  hotel_L3.yaml
sparo_multi_floor_navigation/sparo_navigation_bringup/scripts/: planner_node.py
sparo_multi_floor_navigation/sparo_navigation_bringup/src/: sparo_bt_executor.cpp
sparo_multi_floor_navigation/sparo_navigation_core/: CMakeLists.txt  package.xml  sparo_bt_plugins.xml  sparo_bt_plugins_RCI.xml
sparo_multi_floor_navigation/sparo_navigation_core/include/sparo_navigation_core/: config_loader.hpp
sparo_multi_floor_navigation/sparo_navigation_core/include/sparo_navigation_core/door/: door_plan_controller.hpp  publish_door_yaml.hpp
sparo_multi_floor_navigation/sparo_navigation_core/include/sparo_navigation_core/elevator/: call_elevator_to_floor.hpp  check_elevator_accessible.hpp  elevator_client.hpp  elevator_zones.hpp  get_cabin_goal.hpp  ok_node.hpp  select_nearest_elevator.hpp  set_elevator_door.hpp  wait_cabin_at_target.hpp  wait_door_open.hpp  wait_floor_command.hpp  wait_robot_inside_cabin.hpp  wait_robot_near_elevator.hpp  wait_robot_outside_elevator.hpp
sparo_multi_floor_navigation/sparo_navigation_core/include/sparo_navigation_core/navigation/: check_elevator_accessible.hpp  drive_forward_action.hpp  elevator_actions.hpp  get_patrol_pose_action.hpp  map_switch_action.hpp  navigate_to_intruder_action.hpp  navigation_actions.hpp  patrol_waypoints.hpp  patrol_waypoints_action.hpp  publish_floor_request.hpp  set_initial_pose_action.hpp  stair_navigation_action.hpp  utility_nodes.hpp  wait_for_floor_change.hpp  wait_for_topic_message.hpp
sparo_multi_floor_navigation/sparo_navigation_core/include/sparo_navigation_core/stairs/: align_with_stairs.hpp  check_floor_different.hpp  check_string_equals.hpp  climb_flight_rl.hpp  compute_next_floor.hpp  get_current_floor.hpp  get_target_floor_from_topic.hpp  move_forward_distance.hpp  nav2_navigate_to_pose.hpp  publish_initial_pose_from_tf.hpp  select_stair_entrance.hpp  turn_relative.hpp  wait_manual_floor_request.hpp
sparo_multi_floor_navigation/sparo_navigation_core/msg/: IntruderAlert.msg
sparo_multi_floor_navigation/sparo_navigation_core/scripts/: initial_pose_setter.py  odom_to_tf.py  pc2_to_scan.py
sparo_multi_floor_navigation/sparo_navigation_core/src/: config_loader.cpp  door_bt_runner.cpp  elevator_bt_runner.cpp  intruder_runner.cpp  sparo_bt_nav2_plugin.cpp  sparo_bt_runner.cpp  stair_bt_runner.cpp
sparo_multi_floor_navigation/sparo_navigation_core/src/door/: bt_plugin.cpp  door_plan_controller.cpp
sparo_multi_floor_navigation/sparo_navigation_core/src/elevator/: call_elevator_to_floor.cpp  check_elevator_accessible.cpp  elevator_bt_nav2_plugin.cpp  elevator_client.cpp  get_cabin_goal.cpp  ok_node.cpp  select_nearest_elevator.cpp  set_elevator_door.cpp  wait_cabin_at_target.cpp  wait_door_open.cpp  wait_floor_command.cpp  wait_robot_inside_cabin.cpp  wait_robot_near_elevator.cpp  wait_robot_outside_elevator.cpp
sparo_multi_floor_navigation/sparo_navigation_core/src/navigation/: get_patrol_pose_action.cpp  map_switch_action.cpp  navigate_to_intruder_action.cpp  navigation_actions.cpp  patrol_waypoints.cpp  publish_floor_request.cpp  set_initial_pose_action.cpp  wait_for_floor_change.cpp  wait_for_topic_message.cpp
sparo_multi_floor_navigation/sparo_navigation_core/src/stairs/: align_with_stairs.cpp  check_floor_different.cpp  climb_flight_rl.cpp  compute_next_floor.cpp  get_current_floor.cpp  get_target_floor_from_topic.cpp  move_forward_distance.cpp  nav2_navigate_to_pose.cpp  select_stair_entrance.cpp  turn_relative.cpp
sparo_multi_floor_navigation/sparo_navigation_core/src/utility/: utility_nodes.cpp
